--- a/roles/configure_functional_tests/defaults/main.yaml
+++ b/roles/configure_functional_tests/defaults/main.yaml
@@ -1,5 +1,5 @@
 tests_venv: "{{ tox_envlist }}"
-base_dir: "{{ ansible_user_dir }}/src/git.openstack.org"
+base_dir: "{{ ansible_user_dir }}/src/opendev.org"
 gate_dest_dir: "{{ base_dir }}/openstack"
-devstack_dir: "{{ base_dir }}/openstack-dev/devstack"
+devstack_dir: "{{ base_dir }}/openstack/devstack"
 neutron_dir: "{{ gate_dest_dir }}/neutron"
