--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -146,7 +146,7 @@
     post-run: playbooks/legacy/neutron-functional/post.yaml
     timeout: 7800
     required-projects:
-      - openstack-infra/devstack-gate
+      - openstack/devstack-gate
       - openstack/neutron
     irrelevant-files:
       - ^.*\.rst$
@@ -161,7 +161,7 @@
     post-run: playbooks/legacy/neutron-fullstack/post.yaml
     timeout: 7800
     required-projects:
-      - openstack-infra/devstack-gate
+      - openstack/devstack-gate
       - openstack/neutron
     irrelevant-files:
       - ^.*\.rst$
@@ -177,7 +177,7 @@
     post-run: playbooks/legacy/neutron-rally-neutron/post.yaml
     timeout: 7800
     required-projects:
-      - openstack-infra/devstack-gate
+      - openstack/devstack-gate
       - openstack/aodh
       - openstack/ceilometer
       - openstack/diskimage-builder
@@ -215,7 +215,7 @@
     post-run: playbooks/legacy/neutron-tempest-dvr/post.yaml
     timeout: 7800
     required-projects:
-      - openstack-infra/devstack-gate
+      - openstack/devstack-gate
       - openstack/neutron
       - openstack/tempest
     irrelevant-files:
@@ -236,7 +236,7 @@
     post-run: playbooks/legacy/neutron-tempest-linuxbridge/post.yaml
     timeout: 8400
     required-projects:
-      - openstack-infra/devstack-gate
+      - openstack/devstack-gate
       - openstack/neutron
       - openstack/tempest
     irrelevant-files:
@@ -258,8 +258,8 @@
     post-run: playbooks/legacy/neutron-grenade-multinode/post.yaml
     timeout: 10800
     required-projects:
-      - openstack-dev/grenade
-      - openstack-infra/devstack-gate
+      - openstack/grenade
+      - openstack/devstack-gate
       - openstack/neutron
     nodeset: ubuntu-xenial-2-node
     irrelevant-files:
@@ -280,8 +280,8 @@
     post-run: playbooks/legacy/neutron-grenade-dvr-multinode/post.yaml
     timeout: 7500
     required-projects:
-      - openstack-dev/grenade
-      - openstack-infra/devstack-gate
+      - openstack/grenade
+      - openstack/devstack-gate
       - openstack/neutron
     nodeset: ubuntu-xenial-2-node
     irrelevant-files:
@@ -302,7 +302,7 @@
     post-run: playbooks/legacy/neutron-tempest-multinode-full/post.yaml
     timeout: 10800
     required-projects:
-      - openstack-infra/devstack-gate
+      - openstack/devstack-gate
       - openstack/neutron
       - openstack/tempest
     nodeset: ubuntu-xenial-2-node
@@ -325,7 +325,7 @@
     post-run: playbooks/legacy/neutron-tempest-dvr-ha-multinode-full/post.yaml
     timeout: 10800
     required-projects:
-      - openstack-infra/devstack-gate
+      - openstack/devstack-gate
       - openstack/neutron
       - openstack/tempest
     nodeset: ubuntu-xenial-3-node
@@ -348,7 +348,7 @@
     post-run: playbooks/legacy/neutron-tempest-ovsfw/post.yaml
     timeout: 7800
     required-projects:
-      - openstack-infra/devstack-gate
+      - openstack/devstack-gate
       - openstack/neutron
       - openstack/tempest
     irrelevant-files:
@@ -370,8 +370,8 @@
     post-run: playbooks/legacy/neutron-grenade/post.yaml
     timeout: 10800
     required-projects:
-      - openstack-dev/grenade
-      - openstack-infra/devstack-gate
+      - openstack/grenade
+      - openstack/devstack-gate
       - openstack/neutron
     irrelevant-files:
       - ^(test-|)requirements.txt$
