Switch neutron-tempest-with-uwsgi job to python 3
Change-Id: Ifff3ebe1ce409e8fef59d0c86b796f5b193a8249

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -435,5 +435,6 @@
     vars:
       tox_envlist: full
       devstack_localrc:
+        USE_PYTHON3: true
         NEUTRON_DEPLOY_MOD_WSGI: true
     irrelevant-files: *tempest-irrelevant-files
