[Docs] Add summary of Tempest and Grenade jobs running in CI
This patch adds summary of Tempest and Grenade jobs which we
have run in Neutron's check and gate queues.

Change-Id: I8b96413b33f037b601747ebaa0ff4f0791cad628

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,3 +1,7 @@
+# NOTE: In doc/source/contributor/testing/ci_scenario_jobs.rst file there is
+# document with summary of all tempest, neutron-tempest-plugin and grenade jobs
+# summary.
+# Please update this document always when any changes to jobs are made.
 - project:
     templates:
       - neutron-tempest-plugin-jobs
