Ignore config-samples and policy sample file in git
Sphinx generates files and directories like:
doc/source/_static/config-samples/
doc/source/_static/neutron.policy.yaml.sample

when is building docs pages.
Those files should be ignored in git and this patch adds it
to the .gitignore file.

Change-Id: I42d358bf062f3bcb2809fd762773246186ca4482

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,8 @@ doc/build
 doc/source/_static/nova.conf.sample
 doc/source/_static/nova.policy.yaml.sample
 doc/source/_static/placement.policy.yaml.sample
+doc/source/_static/config-samples/
+doc/source/_static/neutron.policy.yaml.sample
 
 # pbr generates these
 AUTHORS
