--- a/rally-jobs/task-neutron.yaml
+++ b/rally-jobs/task-neutron.yaml
@@ -258,6 +258,27 @@
                 port: -1
         -
           scenario:
+            NeutronNetworks.create_and_bind_ports:
+              ports_per_network: 5
+          runner:
+            constant:
+              times: 3
+              concurrency: 2
+          contexts:
+            users:
+              tenants: 1
+              users_per_tenant: 1
+            roles:
+              - admin
+            quotas:
+              neutron:
+                network: -1
+                subnet: -1
+                port: -1
+            network: {}
+            networking_agents: {}
+        -
+          scenario:
             NeutronNetworks.create_and_delete_ports:
               network_create_args: {}
               port_create_args: {}
