--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Paste>=2.0.2 # MIT
 PasteDeploy>=1.5.0 # MIT
 Routes>=2.3.1 # MIT
 debtcollector>=1.2.0 # Apache-2.0
+decorator>=3.4.0 # BSD
 eventlet!=0.18.3,!=0.20.1,>=0.18.2 # MIT
 pecan>=1.3.2 # BSD
 httplib2>=0.9.1 # MIT
