Run nova's VM boot rally scenario in the neutron gate
As discussed on the neutron_performance meeting [1] we'd like to run
a rally scenario in the neutron gate that boots a vm. Combined with
Slawek's work to integrate osprofiler with rally [2] we should start
to get some insight into neutron's vif plugging performance even if
that's not something directly exposed and measurable through the API.

[1] http://eavesdrop.openstack.org/irclogs/%23openstack-meeting/latest.log.html#t2019-06-03T16:12:17
[2] http://lists.openstack.org/pipermail/openstack-discuss/2019-May/006769.html

Change-Id: I7e2c19e8cdb62cb85046500f862e8dbd42306225

--- a/rally-jobs/task-neutron.yaml
+++ b/rally-jobs/task-neutron.yaml
@@ -1,4 +1,6 @@
 {% set floating_network = floating_network or "public" %}
+{% set image_name = "^(cirros.*-disk|TestVM)$" %}
+{% set flavor_name = "m1.tiny" %}
 
 ---
   version: 2
@@ -468,3 +470,23 @@
             quotas:
               neutron:
                 security_group: -1
+    -
+      title: VM booting workloads
+      workloads:
+        -
+          scenario:
+            NovaServers.boot_and_delete_server:
+              flavor:
+                name: {{flavor_name}}
+              image:
+                name: {{image_name}}
+              auto_assign_nic: true
+          runner:
+            constant:
+              times: 2
+              concurrency: 2
+          contexts:
+            users:
+              tenants: 2
+              users_per_tenant: 2
+            network: {}
