--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ pyroute2>=0.5.3;sys_platform!='win32' # Apache-2.0 (+ dual licensed GPL2)
 weakrefmethod>=1.0.2;python_version=='2.7' # PSF
 
 python-novaclient>=9.1.0 # Apache-2.0
-python-ironicclient>=2.7.0 # Apache-2.0
+python-ironicclient!=2.7.1,>=2.7.0 # Apache-2.0
 python-designateclient>=2.7.0 # Apache-2.0
 os-xenapi>=0.3.1 # Apache-2.0
 os-vif>=1.15.1 # Apache-2.0
