fix NetworkSegmentRange OVO entry point
The NetworkSegmentRange entry point in the setup.cfg references an
invalid package path to the corresponding OVO class. This patch fixes
the package name to reflect the proper path.

Change-Id: I228a159a9d3eca7021e3ba08d9ad40f9ff8329df
(cherry picked from commit 7c174e7bd09c159deab7cf3170e0bb959edaf74a)

--- a/setup.cfg
+++ b/setup.cfg
@@ -198,7 +198,7 @@ neutron.objects =
     NetworkPortSecurity = neutron.objects.network:NetworkPortSecurity
     NetworkRBAC = neutron.objects.network:NetworkRBAC
     NetworkSegment = neutron.objects.network:NetworkSegment
-    NetworkSegmentRange = neutron.objects.network:NetworkSegmentRange
+    NetworkSegmentRange = neutron.objects.network_segment_range:NetworkSegmentRange
     Port = neutron.objects.ports:Port
     PortBinding = neutron.objects.ports:PortBinding
     PortBindingLevel = neutron.objects.ports:PortBindingLevel
