Allow VM booting rally scenarios to time out
Not long ago we enabled a rally scenario booting VMs in the neutron gate
so we can collect osprofiler reports about it. The rally scenario we
re-used was only triggered by changes in the rally-openstack repo so I
could not collect data about its failure rate. Now that it's running
frequently in the neutron gate this scenario actually seems to be quite
unstable (usually timing out while waiting for the VM to get to ACTIVE):

http://logstash.openstack.org/#/dashboard/file/logstash.json?query=message:\"rally.exceptions.TimeoutException: Rally tired waiting\" AND build_name:\"neutron-rally-task\" AND voting:1&from=864000s

Since we only want to run this scenario for the osprofiler report
we can get rid of the gate instability by allowing a 100% failure rate
in the scenario SLA.

Change-Id: Ied354e8242274c8eeb26909e29afbe6d41662bfc
Related-Change: https://review.opendev.org/662804

--- a/rally-jobs/task-neutron.yaml
+++ b/rally-jobs/task-neutron.yaml
@@ -490,3 +490,12 @@
               tenants: 2
               users_per_tenant: 2
             network: {}
+          sla:
+            # NovaServers.boot_and_delete_server is unstable and frequently
+            # times out when waiting for the VM to become ACTIVE. We run this
+            # scenario for the osprofiler report and we ignore the rally
+            # scenario outcome. Ideally we should eliminate the cause of the
+            # timeouts, but even until then we'll get usable osprofiler
+            # results.
+            failure_rate:
+              max: 100
