Replace "integrated-gate" template with new "integrated-gate-networking"
New integrated gate template will run only tests related to
compute and networking projects.
There is no need to run e.g. Cinder related tests in Neutron's gate.

This change was agreed during last PTG in Denver. For more details
please check [1] and [2].

[1] http://lists.openstack.org/pipermail/openstack-discuss/2019-May/005871.html
[2] https://etherpad.openstack.org/p/qa-train-ptg

Change-Id: Ieaac27baee652236db890f0e10c4008e5da1ac02

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -13,7 +13,7 @@
       - periodic-stable-jobs
       - check-requirements
       - integrated-gate
-      - integrated-gate-py3
+      - integrated-gate-networking
       - release-notes-jobs-python3
     check:
       jobs:
